# Project

./: .createMakefile.sh.swp  .gitignore  CMakeCache (1).txt  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md  a.out  branch.sh  cmake_install (1).cmake  cmake_install.cmake  createDebug.sh  createMakefile.sh  deleteCMakeFiles.sh  deleteQt5.sh  evaluate  evaluate.cpp  functions.cpp  main  main.cpp  o  optimal_polygon  optimal_polygon.cpp  polygonization  polygonization.cpp  test.sh  trial  trial.cpp
CGALexamples/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ex.cpp  polyg
CGALexamples/includes/: .utils.hpp.swp  Makefile  cmake_install.cmake  utils.cpp  utils.hpp
headers/: cgalConfig.hpp  convex_hull.hpp  functions.hpp  incremental.hpp  local_search.hpp  onion.h  onion.hpp  simulated_annealing.hpp  subdivision_annealing.hpp  utils.h  utils.hpp
sources/: CMakeLists.txt  convex_hull.cpp  functions.cpp  incremental.cpp  local_search.cpp  onion.cpp  simulated_annealing.cpp  subdivision_annealing.cpp  utils.cpp
