# Created by the script cgal_create_CMakeLists
# This is the CMake script for compiling a set of CGAL applications.

cmake_minimum_required(VERSION 3.1...3.23)

project( polyg )


# CGAL and its components
find_package( CGAL QUIET COMPONENTS  )

if ( NOT CGAL_FOUND )

  message(STATUS "This project requires the CGAL library, and will not be compiled.")
  return()  

endif()


# Boost and its components
find_package( Boost REQUIRED )

if ( NOT Boost_FOUND )

  message(STATUS "This project requires the Boost library, and will not be compiled.")

  return()  

endif()

# include for local directory
add_subdirectory(includes)
list(APPEND EXTRA_LIBS utils)
# include for local package


# Creating entries for target: polyg
# ############################

add_executable( polyg  ex.cpp )

add_to_cached_list( CGAL_EXECUTABLE_TARGETS polyg )

# Link the executable to CGAL and third-party libraries
target_link_libraries(polyg PRIVATE CGAL::CGAL ${EXTRA_LIBS})

